Bug 9017 - xload build looks for __DARWIN__ but it's not defined
Summary: xload build looks for __DARWIN__ but it's not defined
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/other (show other bugs)
Version: 7.2 (2007.02)
Hardware: PowerPC Mac OS X (All)
: high minor
Assignee: Jeremy Huddleston Sequoia
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-11-13 19:31 UTC by Benjamin Reed
Modified: 2008-05-06 02:02 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
change __DARWIN__ to __APPLE__ (656 bytes, patch)
2006-11-13 19:32 UTC, Benjamin Reed
no flags Details | Splinter Review

Description Benjamin Reed 2006-11-13 19:31:41 UTC
I'm not sure if convention is that we're supposed to set __DARWIN__ in configure
now, but it seems reasonable enough to just check for __APPLE__ instead, which
is defined by the compiler.

__DARWIN__ used to be defined by the monolithic build, but it's not defined
anywhere anymore in the modular one.
Comment 1 Benjamin Reed 2006-11-13 19:32:03 UTC
Created attachment 7778 [details] [review]
change __DARWIN__ to __APPLE__
Comment 2 Daniel Stone 2007-02-27 01:34:39 UTC
Sorry about the phenomenal bug spam, guys.  Adding xorg-team@ to the QA contact so bugs don't get lost in future.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.