__DARWIN__ -> __APPLE__ https://bugs.freedesktop.org/show_bug.cgi?id=9017